--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,2 +1,62 @@
-{{title}}
-<h1>hola</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Login V18</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="/assets/images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/assets/css/util.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+<!--===============================================================================================-->
+</head>
+<body style="background-color: #666666;">
+	
+	<div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100">
+				<form class="login100-form validate-form" action="/signup" method="post">
+					<span class="login100-form-title p-b-43">
+						Register
+					</span>
+
+                    <div class="wrap-input100 validate-input" data-validate = "Valid Name is required">
+						<input class="input100" type="text" name="name" id="nameInput" placeholder="Name" required>
+					</div>
+					
+					
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input class="input100" type="text" name="email" placeholder="Email" required>
+					</div>
+					
+					
+					<div class="wrap-input100 validate-input" data-validate="Password is required">
+						<input class="input100" type="password" name="pass" placeholder="Password" required>
+					</div>
+
+			
+
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn" type="submit">
+							Register Account
+						</button>
+					</div>
+					
+				</form>
+
+				<div class="login100-more" style="background-image: url('/assets/images/tocadiscos.jpg');">
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
+
+	
+	
+
+</body>
+</html>
