--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="/assets/images/icons/favicon.ico"/>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="/assets/images/icons/favicon.ico" />
+	<!--===============================================================================================-->
 
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/assets/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 </head>
+
 <body style="background-color: #666666;">
-	
+
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form" action="/login" method="post">
 					<span class="login100-form-title p-b-43">
 						Log in
-					</span>				
-					
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+					</span>
+
+					<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
 						<input class="input100" type="text" name="email" placeholder="Email" required>
 					</div>
-					
-					
+
+
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password" required>
+						<input class="input100" type="password" name="password" placeholder="Password" required>
 					</div>
 
-			
+
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn" type="submit">
@@ -40,24 +42,74 @@
 						</button>
 					</div>
 
-                    <div class="text-center p-t-46 p-b-20">
+					<div class="gsi-material-button" id="googleBoton"
+						style="margin-left: 150px; width:65px; margin-top: 20px;">
+						<div class="gsi-material-button-state"></div>
+						<div class="gsi-material-button-content-wrapper">
+							<div class="gsi-material-button-icon">
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"
+									xmlns:xlink="http://www.w3.org/1999/xlink" style="display: block;">
+									<path fill="#EA4335"
+										d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z">
+									</path>
+									<path fill="#4285F4"
+										d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z">
+									</path>
+									<path fill="#FBBC05"
+										d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z">
+									</path>
+									<path fill="#34A853"
+										d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z">
+									</path>
+									<path fill="none" d="M0 0h48v48H0z"></path>
+								</svg>
+							</div>
+							<span class="gsi-material-button-contents">Continue with Google</span>
+							<span style="display: none;">Continue with Google</span>
+						</div>
+					</div>
+
+					<div class="text-center p-t-46 p-b-20">
 						<span class="txt2">
-							Don't have an account? <a href="./register.handlebars">Sign up</a>
+							Don't have an account? <a href="/signup">Sign up</a>
 						</span>
 					</div>
-					
+
 				</form>
+
+
 
 				<div class="login100-more" style="background-image: url('/assets/images/tocadiscos.jpg');">
 				</div>
 			</div>
 		</div>
 	</div>
-	
-	
 
-	
-	
+	<script>
+		document.getElementById("googleBoton").addEventListener("click", function () {
+			var inputs = document.getElementsByClassName("input100");
+			for (var i = 0; i < inputs.length; i++) {
+				inputs[i].removeAttribute("required");
+			}
+		});
+
+		const googleButton = document.getElementById('googleBoton');
+
+		// Agregar un controlador de eventos de clic al botón
+		googleButton.addEventListener('click', () => {
+			// Redirigir al usuario al endpoint de autenticación de Google
+			window.location.href = '/google';
+		});
+	</script>
+
+
+
+
+
+
+
+
 
 </body>
+
 </html>
