--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -34,7 +34,7 @@
 					
 					
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password" required>
+						<input class="input100" type="password" name="password" placeholder="Password" required>
 					</div>
 
 			
