--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Glint</title>
+    <title>HarmonyHub</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -33,7 +33,7 @@
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
+    <script src="https://kit.fontawesome.com/e0e1920977.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="top">
@@ -160,11 +160,7 @@
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt.
+                    "Welcome to HarmonyHub, where music lovers unite to organize and share their audio treasures effortlessly. Dive into our intuitive platform to upload, curate, and connect with fellow enthusiasts, creating harmony in every beat."
                 </p>
             </div>
         </div> <!-- end about-desc -->
@@ -201,7 +197,7 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">What We Do</h3>
+                <h3 class="subhead" style="color: grey;">What We Do</h3>
                 <h1 class="display-2">We’ve got everything you need to launch and grow your business</h1>
             </div>
         </div> <!-- end section-header -->
@@ -210,13 +206,11 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-paint-brush"></i>
+                    <i class="fa-solid fa-cloud-arrow-up" style="color: black;"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Brand Identity</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                        Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                        Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Upload and organize your audio</h3>
+                    <p>Effortlessly upload audio files and curate personalized playlists, albums, and tags to meticulously organize your music library with ease and precision. Seamlessly manage your collection with intuitive tools.
                     </p>
                 </div>
             </div>
@@ -226,60 +220,30 @@
                     <i class="icon-group"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Illustration</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                        Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                        Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Discover new music:</h3>
+                    <p>Immerse yourself in a vast catalog encompassing an array of genres and artists, uncovering fresh tracks, albums, and recommended artists perfectly tailored to your unique musical preferences.
                     </p>
                 </div>
             </div>
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-megaphone"></i>
+                    <i class="fa-brands fa-slideshare" style="color: black;"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Marketing</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                        Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                        Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Collaborate with others</h3>
+                    <p>Foster creativity and collaboration by inviting friends to join shared music projects, where they can contribute recordings, collaborate on tracks, and collectively craft unforgettable musical experiences.
                     </p>
                 </div>
             </div>
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-earth"></i>
+                    <i class="fa-solid fa-palette" style="color: black;"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Web Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                        Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                        Sunt suscipit voluptas ipsa in tempora esse soluta sint.
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-block service-item" data-aos="fade-up">
-                <div class="service-icon">
-                    <i class="icon-cube"></i>
-                </div>
-                <div class="service-text">
-                    <h3 class="h2">Packaging Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                        Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                        Sunt suscipit voluptas ipsa in tempora esse soluta sint.
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-block service-item" data-aos="fade-up">
-                <div class="service-icon"><i class="icon-lego-block"></i></div>
-                <div class="service-text">
-                    <h3 class="h2">Web Development</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                        Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                        Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Customization and settings</h3>
+                    <p>Personalize your music journey with customizable equalization, playback preferences, and display options, empowering you to fine-tune your listening experience and create your perfect sonic atmosphere
                     </p>
                 </div>
             </div>
@@ -297,8 +261,8 @@
 
             <div class="row section-header has-bottom-sep light-sep" data-aos="fade-up">
                 <div class="col-full">
-                    <h3 class="subhead">Recent Works</h3>
-                    <h1 class="display-2 display-2--light">We love what we do, check out some of our latest works</h1>
+                    <h3 class="subhead">Explore your chances</h3>
+                    <h1 class="display-2 display-2--light">"Explore HarmonyHub in action with our visual tour."</h1>
                 </div>
             </div> <!-- end section-header -->
 
@@ -515,99 +479,6 @@
 
     <!-- clients
     ================================================== -->
-    <section id="clients" class="s-clients">
-
-        <div class="row section-header" data-aos="fade-up">
-            <div class="col-full">
-                <h3 class="subhead">Our Clients</h3>
-                <h1 class="display-2">Glint has been honored to
-                    partner up with these clients</h1>
-            </div>
-        </div> <!-- end section-header -->
-
-        <div class="row clients-outer" data-aos="fade-up">
-            <div class="col-full">
-                <div class="clients">
-
-                    <a href="#0" title="" class="clients__slide"><img
-                            src="/assets/images/homeimages/clients/apple.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img
-                            src="/assets/images/homeimages/clients/atom.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img
-                            src="/assets/images/homeimages/clients/blackberry.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img
-                            src="/assets/images/homeimages/clients/dropbox.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img
-                            src="/assets/images/homeimages/clients/envato.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img
-                            src="/assets/images/homeimages/clients/firefox.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img
-                            src="/assets/images/homeimages/clients/joomla.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img
-                            src="/assets/images/homeimages/clients/magento.png" /></a>
-
-                </div> <!-- end clients -->
-            </div> <!-- end col-full -->
-        </div> <!-- end clients-outer -->
-
-        <div class="row clients-testimonials" data-aos="fade-up">
-            <div class="col-full">
-                <div class="testimonials">
-
-                    <div class="testimonials__slide">
-
-                        <p>Qui ipsam temporibus quisquam vel. Maiores eos cumque distinctio nam accusantium ipsum.
-                            Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium
-                            quos qui praesentium corpori.
-                            Excepturi nam cupiditate culpa doloremque deleniti repellat.</p>
-
-                        <img src="/assets/images/homeimages/avatars/user-01.jpg" alt="Author image"
-                            class="testimonials__avatar">
-                        <div class="testimonials__info">
-                            <span class="testimonials__name">Tim Cook</span>
-                            <span class="testimonials__pos">CEO, Apple</span>
-                        </div>
-
-                    </div>
-
-                    <div class="testimonials__slide">
-
-                        <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas
-                            animi adipisci.
-                            Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam
-                            temporibus quisquam vel.</p>
-
-                        <img src="/assets/images/homeimages/avatars/user-05.jpg" alt="Author image"
-                            class="testimonials__avatar">
-                        <div class="testimonials__info">
-                            <span class="testimonials__name">Sundar Pichai</span>
-                            <span class="testimonials__pos">CEO, Google</span>
-                        </div>
-
-                    </div>
-
-                    <div class="testimonials__slide">
-
-                        <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia
-                            nesciunt. Ducimus aut sed ipsam.
-                            Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius
-                            distinctio.</p>
-
-                        <img src="/assets/images/homeimages/avatars/user-02.jpg" alt="Author image"
-                            class="testimonials__avatar">
-                        <div class="testimonials__info">
-                            <span class="testimonials__name">Satya Nadella</span>
-                            <span class="testimonials__pos">CEO, Microsoft</span>
-                        </div>
-
-                    </div>
-
-                </div><!-- end testimonials -->
-
-            </div> <!-- end col-full -->
-        </div> <!-- end client-testimonials -->
-
-    </section> <!-- end s-clients -->
 
 
     <!-- contact
@@ -846,7 +717,7 @@
         const empezar = document.getElementById('start');
 
         empezar.addEventListener('click', function () {
-            window.location.href = '/login';
+            window.location.href = '/home';
         });
 
     </script>
