Se referencio el /support

--- a/src/views/indexapp.handlebars
+++ b/src/views/indexapp.handlebars
@@ -53,7 +53,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#reports" title="Reports Link">
+                  <a href="/support" title="Reports Link" target="_blank">
                     <div class="icon">
                         <img src="/assets/images/indexappimages/reports.svg" title="Reports Icon">
                     </div>
