--- a/src/public/css/indexapp.css
+++ b/src/public/css/indexapp.css
@@ -1,53 +1,64 @@
-
 :root {
-    --primary-color: black;
-    --primary-color-dark: black;    
-    --button-color: grey;
-    --button-color-shadow: #5433FF30;
-    --text-color: white;
+  --primary-color: #171717;
+  --primary-color-dark: #212121;
+  --button-color: grey;
+  --button-color-shadow: #5433FF30;
+  --text-color: #fcf5e9;
+
+  --white: #FFF;
+  --gray: #F3F3F3;
+  --gray-mid: #d6d6d6;
+  --gray-dark: #3e3e3e;
+  --button-hover: #ECE8F9;
+  --body-background: #f3f1f9;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: Mulish, sans-serif;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .background {
-    content: "";
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    display: grid;
-    place-items: center;
-    opacity: 0.5;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-size: auto;
+  content: "";
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  place-items: center;
+  opacity: 0.5;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
 nav {
-    position: sticky;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    background-color: var(--primary-color);
-    width: 18rem;
-    padding: 1.8rem 0.85rem;
-    color: var(--text-color);
-    display: flex;
-    flex-direction: column;
-    transition: width 0.5s ease-in-out;
+  position: sticky;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  background-color: var(--primary-color);
+  width: 18rem;
+  padding: 1.8rem 0.85rem;
+  color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  transition: width 0.5s ease-in-out;
+  box-shadow: 1px 0 0 rgba(95, 106, 115, 0.2);
 }
 
 main {
   flex: 1;
   display: flex;
   flex-direction: column;
+  flex: 1;
+  margin-left: 200px;
 }
 
 
@@ -101,7 +112,7 @@ nav:hover .expand-btn,
 .sidebar-links ul {
   list-style-type: none;
   position: relative;
- 
+
 }
 
 .sidebar-links li {
@@ -132,6 +143,8 @@ nav:hover .expand-btn,
 
 .sidebar-links .link {
   margin-left: 2.5rem;
+  font-size: medium;
+  margin-left: 10px;
 }
 
 .sidebar-links .active {
@@ -156,3 +169,255 @@ body.collapsed .expand-btn img {
   transform: rotate(-180deg);
 }
 
+.container {
+  display: flex;
+}
+
+.searchmenu {
+  /* Asegúrate de que el contenido sea visible */
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  position: static;
+
+}
+
+/*parte del toolbar*/
+
+.body-toolbar{
+  width: 100%;
+}
+
+
+.btn-t {
+  all: unset;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-t:focus { outline: revert } 
+
+header {
+  height: 4.3rem;
+  padding: 0 1rem;
+  margin: auto;
+  background-color: var(--primary-color);
+  width: 100%;
+  box-shadow: rgba(100, 100, 111, 0.2)
+      0px 7px 29px 0px;
+}
+
+.navigation__group {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  width: 100%;
+}
+
+.navigation__group .icon {
+  width: 3rem;
+  height: 3rem;
+  padding: 0.4rem;
+  transition: all 0.2s ease-in-out;
+  border-radius: 50%;
+}
+
+.apps__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navigation__group > .btn-t:nth-child(1) {
+  margin-right: auto;
+}
+
+.navigation__group .btn-t:hover, 
+.navigation__group .btn-t:focus {
+  background-color: var(--button-hover);
+  border-radius: 50%;
+}
+
+.profile {
+  display: block;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  border-radius: 50%;
+  margin-top: 4px;
+}
+
+
+.dropdown__wrapper svg {
+  stroke: var(--gray-dark);
+}
+
+.apps__button--wrapper {
+  position: relative;
+}
+
+
+.app svg {
+  padding: 0.375rem;
+  width: 3rem;
+  height: 3rem;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+      visibility: hidden;
+      height: 7.5rem;
+  }
+  100% {
+      opacity: 1;
+      visibility: visible;
+      height: 12.5rem;
+  }
+}
+
+@keyframes fadeOutAnimation {
+  0% {
+      opacity: 1;
+      height: 12.5rem;
+      visibility: visible;
+  }
+  100% {
+      opacity: 0;
+      height: 7.5rem;
+      visibility: hidden;
+  }
+}
+
+/*search*/
+
+/* From uiverse.io by @satyamchaudharydev */
+/* this button is inspired by -- whatsapp input */
+/* == type to see fully interactive and click the close buttom to remove the text  == */
+
+.form {
+  --input-bg: var(--white);;
+ /*  background of input */
+  --padding: 1.5em;
+  --rotate: 80deg;
+ /*  rotation degree of input*/
+  --gap: 2em;
+  /*  gap of items in input */
+  --icon-change-color: white;
+ /*  when rotating changed icon color */
+  --height: 40px;
+ /*  height */
+  width: 600px;
+  padding-inline-end: 1em;
+ /*  change this for padding in the end of input */
+  background: var(--input-bg);
+  position: relative;
+  border-radius: 4px;
+}
+
+.form label {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: var(--height);
+  border-radius: 5px;
+}
+
+.form input {
+  width: 100%;
+  padding-inline-start: calc(var(--padding) + var(--gap));
+  outline: none;
+  background: none;
+  border: 0;
+  color: white;
+}
+/* style for both icons -- search,close */
+.form svg {
+  /* display: block; */
+  color: white;
+  transition: 0.3s cubic-bezier(.4,0,.2,1);
+  position: absolute;
+  height: 15px;
+}
+/* search icon */
+.icon3 {
+  position: absolute;
+  left: var(--padding);
+  transition: 0.3s cubic-bezier(.4,0,.2,1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+/* arrow-icon*/
+.swap-off {
+  transform: rotate(-80deg);
+  opacity: 0;
+  visibility: hidden;
+}
+/* close button */
+.close-btn {
+  /* removing default bg of button */
+  background: none;
+  border: none;
+  right: calc(var(--padding) - var(--gap));
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 0.1em;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  transition: 0.3s;
+  opacity: 0;
+  transform: scale(0);
+  visibility: hidden;
+}
+
+.form input:focus ~ .icon3 {
+  transform: rotate(var(--rotate)) scale(1.3);
+  color: white;
+}
+
+.form input:focus ~ .icon3 .swap-off {
+  opacity: 1;
+  transform: rotate(-80deg);
+  visibility: visible;
+  color: white;
+}
+
+.form input:focus ~ .icon3 .swap-on {
+  opacity: 0;
+  visibility: visible;
+}
+
+.form input:valid ~ .icon3 {
+  transform: scale(1.3) rotate(var(--rotate))
+}
+
+.form input:valid ~ .icon3 .swap-off {
+  opacity: 1;
+  visibility: visible;
+  color: white;
+}
+
+.form input:valid ~ .icon3 .swap-on {
+  opacity: 0;
+  visibility: visible;
+}
+
+.form input:valid ~ .close-btn {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  transition: 0s;
+}
+
+
+.content {
+  margin-top: 1rem; /* Agrega un margen superior para separar el contenido del menú */
+}
