actualizacion del home con tarjetas

--- a/src/views/projects.handlebars
+++ b/src/views/projects.handlebars
@@ -4,7 +4,7 @@
 
     <div class="container-projects">
         <div class="bar-projects">
-            <i class="fa-solid fa-plus" style="color: rgba(245, 245, 245, 0.5);" id="iconplus"></i>
+            <i class="fa-solid fa-plus" style="color: rgba(245, 245, 245, 0.5); margin-left: 1%;" id="iconplus"></i>
             <p style="color: rgba(245, 245, 245, 0.5);" id="textplus">New</p>
             <div class="group-bar">
                 <svg viewBox="0 0 24 24" aria-hidden="true" class="icon4">
@@ -21,13 +21,49 @@
             <i class="fa-solid fa-bars" style="color: rgba(245, 245, 245, 0.5);"></i>
 
         </div>
-        <div class="cards">
-            <!-- Tarjetas aquí -->
-            <div class="card">Tarjeta 1</div>
-            <div class="card">Tarjeta 2</div>
-            <div class="card">Tarjeta 2</div>
-            <!-- Agrega más tarjetas según sea necesario -->
+        <div class="cards" style="margin-top: 10px;">
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-description">
+                    <p class="text-title">The Helves Project</p>
+                    <p class="text-body">By Mateo Hernandez Gutierrez
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-description">
+                    <p class="text-title">The Helves Project</p>
+                    <p class="text-body">By Mateo Hernandez Gutierrez
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-description">
+                    <p class="text-title">The Helves Project</p>
+                    <p class="text-body">By Mateo Hernandez Gutierrez
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-description">
+                    <p class="text-title">The Helves Project</p>
+                    <p class="text-body">By Mateo Hernandez Gutierrez
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-description">
+                    <p class="text-title">The Helves Project</p>
+                    <p class="text-body">By Mateo Hernandez Gutierrez
+                    </p>
+                </div>
+            </div>
         </div>
+        
     </div>
 
     <script src="/assets/js/projects-section.js"></script>
