--- a/src/public/css/indexapp.css
+++ b/src/public/css/indexapp.css
@@ -73,14 +73,16 @@ main {
   position: relative;
   width: 3.37rem;
   margin-right: 1.45rem;
-  margin-left: -10px;
+  margin-left: -15px;
   left: -0.125rem;
+  margin-top: -30px;
 }
 
 .sidebar-top h2 {
   padding-left: 0.5rem;
   font-weight: 600;
   font-size: 1.4rem;
+  margin-top: -30px;
 }
 
 .expand-btn {
@@ -128,6 +130,8 @@ nav:hover .expand-btn,
   height: 3.5rem;
   text-decoration: none;
   color: var(--text-color);
+  margin-top: -25px;
+  margin-bottom: 30px
 }
 
 .icon {
