--- a/src/public/css/projects.css
+++ b/src/public/css/projects.css
@@ -14,30 +14,78 @@
 }
 
 .container-projects {
-    max-height: 300px;
+    max-height: 800px;
     /* Altura máxima del contenedor */
     overflow-y: auto;
 }
 
 .cards {
-    width: calc(100% - 20px);
-    /* Ancho total menos el espacio del padding */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    margin-left: 1%;
+    /* Espacio entre las tarjetas */
     padding: 10px;
     /* Espacio interior */
+    overflow-y: auto;
+    /* Permitir desplazamiento vertical si hay más tarjetas que el contenedor puede mostrar */
+    max-height: 300px;
+    /* Altura máxima del contenedor */
 }
 
 .card {
-    background: var(--primary-color);
-    /* Color de fondo de la tarjeta */
-    box-shadow: 1px 1px 1px 1px rgba(95, 106, 115, 0.2);
-    /* Borde de la tarjeta */
-    border-radius: 5px;
-    /* Borde redondeado */
-    padding: 10px;
-    /* Espacio interior */
-    margin-bottom: 10px;
-    /* Margen inferior entre tarjetas */
+    height: 190px;
+    width: 190px;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border-radius: 16px;
+    overflow: hidden;
 }
+
+/*Image*/
+.card-image {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: #0a3394;
+    background: linear-gradient(to top, #0a3394, #4286f4);
+}
+
+/*Description */
+.card-description {
+    display: flex;
+    position: absolute;
+    gap: .5em;
+    flex-direction: column;
+    background-color: #f5f5f5;
+    color: #212121;
+    height: 70%;
+    bottom: 0;
+    border-radius: 16px;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    padding: 1rem;
+}
+
+/*Text*/
+.text-title {
+    font-size: 1.3rem;
+    font-weight: 700;
+}
+
+.text-body {
+    font-size: 1rem;
+    line-height: 130%;
+}
+
+
+/* Hover states */
+.card:hover .card-description {
+    transform: translateY(100%);
+}
+
+
+
+
 
 .container-projects::-webkit-scrollbar {
     display: none;
