--- a/src/views/layouts/sidebarmenu.handlebars
+++ b/src/views/layouts/sidebarmenu.handlebars
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sidebar</title>
+  <title>HarmonyHub</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
