--- a/src/views/layouts/sidebarmenu.handlebars
+++ b/src/views/layouts/sidebarmenu.handlebars
@@ -26,18 +26,18 @@
         <ul>
           <li>
             <a href="#portfolio" class="active" title="Portfolio link">
-              <div class="icon">
+              <div class="icon" style="color: white;">
                 <img src="/assets/images/indexappimages/portfolio.svg" title="Portfolio Icon">
               </div>
-              <span class="link hide">Projects</span>
+              <span class="link hide">Inbox</span>
             </a>
           </li>
           <li>
             <a href="#analytics" title="Analytics link">
               <div class="icon">
-                <img src="/assets/images/indexappimages/analytics.svg" title="Analytics Icon">
+                <img src="/assets/images/indexappimages/analytics.svg"  title="Analytics Icon">
               </div>
-              <span class="link hide">Analytics</span>
+              <span class="link hide">Projects</span>
             </a>
           </li>
           <li>
@@ -45,7 +45,7 @@
               <div class="icon">
                 <img src="/assets/images/indexappimages/dashboard.svg" title="Performance Icon">
               </div>
-              <span class="link hide">Algo</span>
+              <span class="link hide">Downloads</span>
             </a>
           </li>
           <li>
