--- a/src/views/projects.handlebars
+++ b/src/views/projects.handlebars
@@ -55,7 +55,9 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-image"></div>
+                <div class="card-image">
+                    <img src="https://m.media-amazon.com/images/I/61hw9WloObL._UF1000,1000_QL80_.jpg" alt="">
+                </div>
                 <div class="card-description">
                     <p class="text-title">The Helves Project</p>
                     <p class="text-body">By Mateo Hernandez Gutierrez
@@ -63,7 +65,7 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
 
     <script src="/assets/js/projects-section.js"></script>
