--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -34,6 +34,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e0e1920977.js" crossorigin="anonymous"></script>
+
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body id="top">
