--- a/src/views/projects.handlebars
+++ b/src/views/projects.handlebars
@@ -4,8 +4,11 @@
 
     <div class="container-projects">
         <div class="bar-projects">
-            <i class="fa-solid fa-plus" style="color: rgba(245, 245, 245, 0.5); margin-left: 1%;" id="iconplus"></i>
-            <p style="color: rgba(245, 245, 245, 0.5);" id="textplus">New</p>
+            <div class="newProjectButton addProject" style="display: flex; margin-left: 1%; cursor:pointer;">
+                <i class="fa-solid fa-plus" style="color: rgba(245, 245, 245, 0.5);" id="iconplus"></i>
+                <p style="color: rgba(245, 245, 245, 0.5);" id="textplus">New</p>
+            </div>
+
             <div class="group-bar">
                 <svg viewBox="0 0 24 24" aria-hidden="true" class="icon4">
                     <g>
@@ -22,51 +25,52 @@
 
         </div>
         <div class="cards" style="margin-top: 10px;">
-            <div class="card">
-                <div class="card-image"></div>
-                <div class="card-description">
-                    <p class="text-title">The Helves Project</p>
-                    <p class="text-body">By Mateo Hernandez Gutierrez
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-image"></div>
-                <div class="card-description">
-                    <p class="text-title">The Helves Project</p>
-                    <p class="text-body">By Mateo Hernandez Gutierrez
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-image"></div>
-                <div class="card-description">
-                    <p class="text-title">The Helves Project</p>
-                    <p class="text-body">By Mateo Hernandez Gutierrez
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-image"></div>
-                <div class="card-description">
-                    <p class="text-title">The Helves Project</p>
-                    <p class="text-body">By Mateo Hernandez Gutierrez
-                    </p>
-                </div>
-            </div>
+
+            {{#if projects}}
+            {{#each projects}}
             <div class="card">
                 <div class="card-image">
-                    <img src="https://m.media-amazon.com/images/I/61hw9WloObL._UF1000,1000_QL80_.jpg" alt="">
+                    <img src="{{#if projectImage}}{{projectImage}}{{else}}https://i.pinimg.com/564x/47/5b/72/475b72acb3f65dd57e938e4eab8ac895.jpg{{/if}}"
+                        alt="">
                 </div>
                 <div class="card-description">
-                    <p class="text-title">The Helves Project</p>
-                    <p class="text-body">By Mateo Hernandez Gutierrez
+                    <p class="text-title">{{projectName}}</p>
+                    <p class="text-body">By {{userId}}
                     </p>
                 </div>
             </div>
+            {{/each}}
+            {{else}}
+            <div class="noProjects">
+                <iframe src="https://lottie.host/embed/fa42beed-f3fa-4aa9-bd43-a40c2a860ced/47Drnp1yll.json"
+                    style="border: 0px; margin-top: -5%; margin-left: -1%;"></iframe>
+                <p class="cookieHeading">Get Started with Your Projects!.</p>
+                <p class="cookieDescription">No projects yet? Let's create something amazing together! Start now and
+                    share your creativity with the world.</p>
+
+                <div class="buttonContainer">
+                    <button class="acceptButton addProject">Create Project</button>
+                </div>
+
+
+            </div>
+            {{/if}}
+
         </div>
 
     </div>
+
+    <div class="modalBackground" id="modalNewProject"
+        style="width: 100%; height:100%; background-color:rgba(0, 0, 0, 0.542); z-index:50; position: fixed; top:0; left:0; display:none">
+        <div class="modalNewProject" id="modalContent">
+            <input type="text" id="inputNewProject" placeholder="Project Name...">
+            <div id="createPButton" style="display: flex; cursor: pointer;">
+                <i class="fa-solid fa-plus" style="margin-left: 3%; margin-top: 1.5%"></i>
+                <p style="font-size: 14px; margin-top: 1.2%; margin-left: 1%">Create Project...</p>
+            </div>
+        </div>
+    </div>
+
 
     <script src="/assets/js/projects-section.js"></script>
 
