--- a/src/views/projects.handlebars
+++ b/src/views/projects.handlebars
@@ -62,14 +62,19 @@
 
     <div class="modalBackground" id="modalNewProject"
         style="width: 100%; height:100%; background-color:rgba(0, 0, 0, 0.542); z-index:50; position: fixed; top:0; left:0; display:none">
-        <div class="modalNewProject" id="modalContent">
-            <input type="text" id="inputNewProject" placeholder="Project Name...">
-            <div id="createPButton" style="display: flex; cursor: pointer;">
-                <i class="fa-solid fa-plus" style="margin-left: 3%; margin-top: 1.5%"></i>
-                <p style="font-size: 14px; margin-top: 1.2%; margin-left: 1%">Create Project...</p>
+        <form id="projectForm" action="/home/createProject" method="post" enctype="multipart/form-data">
+            <div class="modalNewProject" id="modalContent">
+                <input type="text" id="inputNewProject" name="projectName" placeholder="Project Name...">
+                <input type="file" id="Song" name="Song" accept="audio/mp3">
+                <!-- Agrega otros campos de entrada para los datos del proyecto si es necesario -->
+                <button type="submit" id="createPButton" style="display: flex; cursor: pointer; width: 100%; align-items: center; justify-content: center; background-color:#fef27a; border: none; border-radius: 5px; color: black;">
+                    <i class="fa-solid fa-plus" style="margin-right: 5px;"></i>
+                    Create Project...
+                </button>
             </div>
-        </div>
+        </form>
     </div>
+
 
 
     <script src="/assets/js/projects-section.js"></script>
