--- a/src/views/singleProject.handlebars
+++ b/src/views/singleProject.handlebars
@@ -10,14 +10,14 @@
             <img src="https://m.media-amazon.com/images/I/61hw9WloObL._UF1000,1000_QL80_.jpg" alt="">
         </div>
         <div class="infoDataContainer">
-            <h1>The Helves Project</h1>
+            <h1>{{projectName}}</h1>
             <div class="buttonsAlbum" style="display: flex;">
                 <button type="button" class="btn-t">
                     <img class="profile"
                         src="https://i.pinimg.com/originals/ce/7c/b2/ce7cb27b41f91c5d4b061c07d39936de.jpg"
                         alt="Profile Picture">
                 </button>
-                <p style="margin-right: 2%;">Mateo Hernandez</p>
+                <p style="margin-right: 2%;">{{userId}}</p>
                 <i class="fa-solid fa-circle"
                     style="color: white; margin-left: 1%; margin-right:1%; font-size: 8px; margin-top: 2%;"></i>
                 <p>10 tracks 46mins</p>
