--- a/src/public/css/singleProject.css
+++ b/src/public/css/singleProject.css
@@ -151,25 +151,44 @@
 
 .track {
     background: transparent;
-    /* Borde redondeado */
     padding: 12px;
-    /* Espacio interior */
     margin-bottom: 10px;
     color: white;
     transition: background-color 0.3s ease;
-
+    height: 60px; /* Establecer un alto fijo */
 }
 
-.track #numberTrack {
+/* Estilos para la información de la pista */
+.track .trackInfo {
+    display: flex;
+    align-items: center;
+}
+
+/* Estilos para el número de pista */
+.track .trackInfo #numberTrack {
     font-size: smaller;
     color: rgba(245, 245, 245, 0.5);
     margin-right: 1%;
     margin-top: 0.2%;
 }
 
-.track #moreInfoTrack {
-    margin-left: 90%;
+/* Estilos para el icono de información */
+.track .trackInfo #moreInfoTrack {
+    margin-left: auto; /* Mover el icono de información al final */
 }
+
+/* Estilos para la duración de la pista */
+.track .duration {
+    font-size: smaller;
+    color: rgba(245, 245, 245, 0.5);
+    margin-left: auto;
+}
+
+
+.track audio.audioPlayer {
+    height: 100%; /* Hacer que el reproductor de audio tenga la misma altura que el elemento track */
+}
+
 
 #trackDuration {
     font-size: smaller;
@@ -193,8 +212,6 @@
     background-color: rgba(255, 255, 255, 0.2);
     /* Nuevo color de fondo cuando se hace clic */
 }
-
-/*reproductor de mp3*/
 
 .audio-player {
     display: flex;
